// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Final wizard Renders renders errored step correctly 1`] = `
<Wizard
  appendTo={null}
  backButtonText="Back"
  cancelButtonText="Cancel"
  className=""
  closeButtonAriaLabel="Close"
  description="Connect a data source to use with your applications."
  footer={null}
  hasNoBodyPadding={false}
  height={null}
  hideClose={false}
  isOpen={true}
  navAriaLabel="Steps"
  nextButtonText="Next"
  onBack={null}
  onClose={[MockFunction]}
  onGoToStep={null}
  onNext={null}
  startAtStep={1}
  steps={
    Array [
      Object {
        "component": <ErroredStep
          customText="Your source has not been successfully added:"
          onClose={[MockFunction]}
          onRetry={[MockFunction]}
          progressStep={0}
          progressTexts={
            Array [
              "Completed",
            ]
          }
          retryText="Retry"
          returnButtonTitle="Go back to my application"
          title="Configuration unsuccessful"
        />,
        "isFinishedStep": true,
        "name": "Finish",
      },
    ]
  }
  title="Add source"
  width={null}
/>
`;

exports[`Final wizard Renders renders finished step correctly 1`] = `
<Wizard
  appendTo={null}
  backButtonText="Back"
  cancelButtonText="Cancel"
  className=""
  closeButtonAriaLabel="Close"
  description="Connect a data source to use with your applications."
  footer={null}
  hasNoBodyPadding={false}
  height={null}
  hideClose={false}
  isOpen={true}
  navAriaLabel="Steps"
  nextButtonText="Next"
  onBack={null}
  onClose={[MockFunction]}
  onGoToStep={null}
  onNext={null}
  startAtStep={1}
  steps={
    Array [
      Object {
        "component": <FinishedStep
          hideSourcesButton={false}
          linkText="Take me to sources"
          onClose={[MockFunction]}
          progressStep={0}
          progressTexts={
            Array [
              "Completed",
            ]
          }
          returnButtonTitle="Go back to my application"
          successfulMessage="Message"
          title="Configuration successful"
        />,
        "isFinishedStep": true,
        "name": "Finish",
      },
    ]
  }
  title="Add source"
  width={null}
/>
`;

exports[`Final wizard Renders renders loading step correctly 1`] = `
<Wizard
  appendTo={null}
  backButtonText="Back"
  cancelButtonText="Cancel"
  className=""
  closeButtonAriaLabel="Close"
  description="Connect a data source to use with your applications."
  footer={null}
  hasNoBodyPadding={false}
  height={null}
  hideClose={false}
  isOpen={true}
  navAriaLabel="Steps"
  nextButtonText="Next"
  onBack={null}
  onClose={[MockFunction]}
  onGoToStep={null}
  onNext={null}
  startAtStep={1}
  steps={
    Array [
      Object {
        "component": <LoadingStep
          cancelTitle="Cancel"
          customText="Source is being created"
          progressStep={0}
          progressTexts={
            Array [
              "Completed",
            ]
          }
        />,
        "isFinishedStep": true,
        "name": "Finish",
      },
    ]
  }
  title="Add source"
  width={null}
/>
`;
